added all unimplemented test cases and my test cases as well